--- a/style.css
+++ b/style.css
@@ -33,3 +33,12 @@ h1 {
     padding: 5px;
     margin-block: 1em;
 }
+
+.item:hover {
+    cursor: pointer;
+}
+
+.selezionato {
+    background-color: aqua;
+    color: white;
+}
